finished the safehouse sheet

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,49 +1,2 @@
-Create Safe house sheet
-Finish the npc Supernatural sheet
-
-NPCs:
--------
-Supernatties
-- types
-    - Servitors 
-    - full on creature
-- least 4 Stress, but it could take much more.
-- Powers
-- weaknesses
-- Compulsions
-- Deterrents 
-- Vulnerabilities
-- When they first appear in a scene or reveal their true nature, every Operator that sees them rolls for Stress.
-
------
-
-Vampire conspiracy
-- Vampiric Servitor
-    - Ghoul
-    - Thrall
-    - Shade
-    - Zombie
-- Vampire
-    "Young Vampire"
-    "Old Vampire"
-    "Ancient Vampire"
-
-Demon Conspiracy
-- Demonic Servitor
-    "Demonic Spirit",
-    "Grand Wizard",
-    "Imp",
-- Demons
-    "Demonic Foot-soldier",
-    "Hellish Nobility",
-    "Favored of Lucifer"
-
-Fae Conspiracy
-- Fae Servitor
-    "Elementals",
-    "Redcaps",
-    "Werewolves"
-- Noble Fae
-    "Fae Courtier",
-    "Fae Knight",
-    "Fae Crown"
+get all the text into en file
+add heat message
