--- a/lang/en.json
+++ b/lang/en.json
@@ -258,6 +258,8 @@
     },
     "name.placeholder": "Name",
     "description.label": "Description",
+    "detail.label": "Detail:",
+    "risk.label": "Risk Die?",
     "gear": {
       "tags.label": "Tags:",
       "load.label": "Load:"
@@ -273,6 +275,22 @@
     "skills.label": "Skills",
     "glance.label": "At a Glance",
     "motivation.label": "Motivations",
+    "type.label": "Type",
+    "subtype.label": "Subtype",
+    "tab.main.label": "Main",
+    "tab.notes.label": "Notes",
+    "supernaturalAbilities": {
+      "name.label": "Name",
+      "detail.label": "Detail",
+      "risk.label": "Risk Die?",
+      "powers.label": "Powers",
+      "weaknesses": {
+        "label": "Weaknesses",
+        "compulsions.label": "Compulsions",
+        "deterrents.label": "Deterrents"
+      },
+      "vulnerabilities.label": "Vulnerabilities"
+    },
     "nameless": {
       "types": {
         "option.1": "Criminal Pawn",
@@ -296,92 +314,19 @@
             "servitor": {
               "label": "Vampiric Servitor",
               "subtypes": {
-                "placeholder": "Choose a type of Vampiric Servitor",
-                "option.1": "Ghoul",
-                "option.2": "Thrall",
-                "option.3": "Shade",
-                "option.4": "Zombie"
+                "ghoul.label": "Ghoul",
+                "thrall.label": "Thrall",
+                "shade.label": "Shade",
+                "zombie.label": "Zombie"
               }
             },
             "full": {
               "label": "Vampire",
               "subtypes": {
-                "placeholder": "Choose a type of Vampire",
-                "option.1": "Young Vampire",
-                "option.2": "Old Vampire",
-                "option.3": "Ancient Vampire"
+                "young.label": "Young Vampire",
+                "old.label": "Old Vampire",
+                "ancient.label": "Ancient Vampire"
               }
-            }
-          },
-          "power": {
-            "label": "Power",
-            "options": {
-              "placeholder": "Choose a Power",
-              "option.1": "Cloak of Darkness",
-              "option.2": "Fly",
-              "option.3": "Grant Power",
-              "option.4": "Great Speed",
-              "option.5": "*Great Strength",
-              "option.6": "Inhuman Senses",
-              "option.7": "Incorporeal (Mist)",
-              "option.8": "Invisible",
-              "option.9": "Mesmerism",
-              "option.10": "*Poltergeist",
-              "option.11": "Possession",
-              "option.12": "Regenerate",
-              "option.13": "See in the dark",
-              "option.14": "Shapechange (Wolf)",
-              "option.15": "Spider Climb",
-              "option.16": "Stench of Fear",
-              "option.17": "Summon & Command Wolves",
-              "option.18": "Summon & Command Rats",
-              "option.19": "Summon & Command Zombies",
-              "option.20": "*Teeth & Claws",
-              "option.21": "Track ... by blood",
-              "option.22": "Track ... by psychic connection",
-              "option.23": "Wards, Bindings & Spells",
-              "option.24": "for Control ..."
-            }
-          },
-          "compulsion": {
-            "label": "Compulsion",
-            "options": {
-              "placeholder": "Choose a Compulsion",
-              "option.1": "Addicted to ... human flesh",
-              "option.2": "Addicted to ... Vampiric blood",
-              "option.3": "Attracted to ... noise",
-              "option.4": "Attracted to ... any blood",
-              "option.5": "Attracted to ... human blood",
-              "option.6": "Bound to place",
-              "option.7": "Obey ... Vampire Creator/Sire",
-              "option.8": "Tempt them",
-              "option.9": "for Control ..."
-            }
-          },
-          "deterrent": {
-            "label": "Deterrent",
-            "options": {
-              "placeholder": "Choose a Deterrent",
-              "option.1": "Fire",
-              "option.2": "Fresh ... Garlic",
-              "option.3": "Mirrors",
-              "option.4": "Running water",
-              "option.5": "Salt",
-              "option.6": "Sunlight",
-              "option.7": "Symbol of ... Faith",
-              "option.8": "for Control ..."
-            }
-          },
-          "vulnerability": {
-            "label": "Vulnerability",
-            "options": {
-              "placeholder": "Choose a Vulnerability",
-              "option.1": "Extreme Deterrence: Fire",
-              "option.2": "Vulnerable to ... Green Oak Stake",
-              "option.3": "Iconic Weapon of Faith",
-              "option.4": "Precise strike: Heart",
-              "option.5": "Double Tap",
-              "option.6": "for Control ..."
             }
           }
         },
@@ -391,101 +336,18 @@
             "servitor": {
               "label": "Demonic Servitor",
               "subtypes": {
-                "placeholder": "Choose a type of Demonic Servitor",
-                "option.1": "Demonic Spirit",
-                "option.2": "Grand Wizard",
-                "option.3": "Imp"
+                "spirit.label": "Demonic Spirit",
+                "wizard.label": "Grand Wizard",
+                "imp.label": "Imp"
               }
             },
             "full": {
               "label": "Demon",
               "subtypes": {
-                "placeholder": "Choose a type of Demon",
-                "option.1": "Demonic Foot-soldier",
-                "option.2": "Hellish Nobility",
-                "option.3": "Favored of Lucifer"
+                "soldier.label": "Demonic Foot-soldier",
+                "nobility.label": "Hellish Nobility",
+                "favored.label": "Favored of Lucifer"
               }
-            }
-          },
-          "power": {
-            "label": "Power",
-            "options": {
-              "placeholder": "Choose a Power",
-              "option.1": "*Armoured ... Chitinous skin",
-              "option.2": "Cloak of Darkness",
-              "option.3": "Discover Desire",
-              "option.4": "Fly ... bat wings",
-              "option.5": "Fly ... insect wings",
-              "option.6": "Glamour",
-              "option.7": "Grant Power",
-              "option.8": "*Great Strength",
-              "option.9": "Inhuman Senses",
-              "option.10": "Incorporeal",
-              "option.11": "Open Portal ... to Hell",
-              "option.12": "*Poltergeist",
-              "option.13": "Possession",
-              "option.14": "Project Desire or Emotion",
-              "option.15": "Regenerate",
-              "option.16": "See in the dark",
-              "option.17": "Shocking True Form",
-              "option.18": "Spider Climb",
-              "option.19": "*Spit Venom",
-              "option.20": "Stench of Fear",
-              "option.21": "Summon & Command Insect Swarm",
-              "option.22": "Summon & Command Imps",
-              "option.23": "Summon & Command Servitor",
-              "option.24": "Summon & Command Demon",
-              "option.25": "*Teeth & Claws",
-              "option.26": "Teleport",
-              "option.27": "Track ... the soul",
-              "option.28": "Track ... by sin",
-              "option.29": "Wards, Bindings & Spells",
-              "option.30": "for Control ..."
-            }
-          },
-          "compulsion": {
-            "label": "Compulsion",
-            "options": {
-              "placeholder": "Choose a Compulsion",
-              "option.1": "Addicted to ... mortal pain",
-              "option.2": "Addicted to ... human flesh",
-              "option.3": "Attracted to ... mortal sin",
-              "option.4": "Destroy or Pollute the works of ... God",
-              "option.5": "Fascinated by ... mortal beauty",
-              "option.6": "Fascinated by ... mortal wit",
-              "option.7": "Obey ... Favoured of Lucifer",
-              "option.8": "Obey ... Hellish Nobility",
-              "option.9": "Obey ... Lucifer",
-              "option.10": "Obey ... Patron Demon",
-              "option.11": "Obey ... Summoner",
-              "option.12": "Tempt them",
-              "option.13": "for Control ..."
-            }
-          },
-          "deterrent": {
-            "label": "Deterrent",
-            "options": {
-              "placeholder": "Choose a Deterrent",
-              "option.1": "Noise: Trumpets",
-              "option.2": "Running water",
-              "option.3": "Symbol of ... Faith",
-              "option.4": "Symbol of ... Power",
-              "option.5": "True name",
-              "option.6": "Iconic Weapon of Faith",
-              "option.7": "for Control ..."
-            }
-          },
-          "vulnerability": {
-            "label": "Vulnerability",
-            "options": {
-              "placeholder": "Choose a Vulnerability",
-              "option.1": "Extreme Deterrence: Symbol of Power",
-              "option.2": "Extreme Deterrence: True Name",
-              "option.3": "Vulnerable to ... Holy Water",
-              "option.4": "Iconic Weapon of Faith",
-              "option.5": "Precise strike: Beheading",
-              "option.6": "Double Tap",
-              "option.7": "for Control ..."
             }
           }
         },
@@ -493,100 +355,20 @@
           "label": "The Fae Conspiracy",
           "type": {
             "servitor": {
-              "label": "Vampiric Servitor",
+              "label": "Fae Servitor",
               "subtypes": {
-                "placeholder": "Choose a type of Fae Servitor",
-                "option.1": "Elementals",
-                "option.2": "Redcaps",
-                "option.3": "Werewolves"
+                "elemental.label": "Elemental",
+                "redcap.label": "Redcap",
+                "werewolf.label": "Werewolf"
               }
             },
             "full": {
               "label": "Fae Noble",
               "subtypes": {
-                "placeholder": "Choose a type of Fae Noble",
-                "option.1": "Fae Courtier",
-                "option.2": "Fae Knight",
-                "option.3": "Fae Crown"
+                "courtier.label": "Fae Courtier",
+                "knight.label": "Fae Knight",
+                "crown.label": "Fae Crown"
               }
-            }
-          },
-          "power": {
-            "label": "Power",
-            "options": {
-              "placeholder": "Choose a Power",
-              "option.1": "*Armoured ... Bark Skin",
-              "option.2": "*Berserk rage",
-              "option.3": "Cloak of Darkness",
-              "option.4": "Discover Desire",
-              "option.5": "*Elemental Blast of Nature",
-              "option.6": "Fly: butterfly wings",
-              "option.7": "Glamour",
-              "option.8": "Great Speed",
-              "option.9": "*Great Strength",
-              "option.10": "Inhuman Senses",
-              "option.11": "Inhuman Senses (Wolf)",
-              "option.12": "Mesmerism",
-              "option.13": "Open Portal ... to the Otherworld",
-              "option.14": "Project Desire or Emotion",
-              "option.15": "Regenerate",
-              "option.16": "See in the dark",
-              "option.17": "Shapechange (Wolf)",
-              "option.18": "Shocking True Form",
-              "option.19": "Spider Climb",
-              "option.20": "Summon & Command Wolves",
-              "option.21": "Summon & Command Ravens",
-              "option.22": "Summon & Command Servitors",
-              "option.23": "Summon & Command Fae Courtier",
-              "option.24": "Summon & Command Fae Knight",
-              "option.25": "*Teeth & Claws",
-              "option.26": "Track ... in 'the wild'",
-              "option.27": "Wards, Bindings & Spells",
-              "option.28": "for Control ..."
-            }
-          },
-          "compulsion": {
-            "label": "Compulsion",
-            "options": {
-              "placeholder": "Choose a Compulsion",
-              "option.1": "Addicted to ... mortal fear",
-              "option.2": "Addicted to ... mortal pain",
-              "option.3": "Addicted to ... mortal flesh",
-              "option.4": "Attracted to ... mortal blood",
-              "option.5": "Destroy or pollute the works of ... the New Gods",
-              "option.6": "Fascinated by ... Riddles",
-              "option.7": "Honour a debt",
-              "option.8": "Nature's phases ... Full Moon",
-              "option.9": "Nature's phases ... Season",
-              "option.10": "Obey ... Summoner",
-              "option.11": "Obey ... Patron Fae",
-              "option.12": "Tempt them",
-              "option.13": "for Control ..."
-            }
-          },
-          "deterrent": {
-            "label": "Deterrent",
-            "options": {
-              "placeholder": "Choose a Deterrent",
-              "option.1": "Antithetical Element",
-              "option.2": "Fresh ... Wolfsbane",
-              "option.3": "Bronze blade",
-              "option.4": "Sunlight",
-              "option.5": "Symbol of ... the New Gods",
-              "option.6": "for Control ..."
-            }
-          },
-          "vulnerability": {
-            "label": "Vulnerability",
-            "options": {
-              "placeholder": "Choose a Vulnerability",
-              "option.1": "Extreme Deterrence: Antithetical Element",
-              "option.2": "Vulnerable to ... Bronze",
-              "option.3": "Vulnerable to ... Silver",
-              "option.4": "Iconic Weapon",
-              "option.5": "Precise strike: Beheading",
-              "option.6": "Double Tap",
-              "option.7": "for Control ..."
             }
           }
         }
@@ -600,16 +382,17 @@
     "target.label": "Target?",
     "blown.label": "Blown?",
     "questions": {
-      "placeLike.label": "What is this place like? Briefly describe it.",
-      "reassures.label": "Who is vulnerable nearby? Which innocent bystanders will be at risk if this place is hit by the Conspiracy?",
-      "vulnerable.label": "What single thing reassures you that this place is safe? Is there a good view of approach routes? Is there more than one way out? Is it well away from police patrol routes? Is it something else?",
-      "notIdeal.label": "Why isn’t this place ideal? What worries you about it as a safe house? What is its major drawback or vulnerability?"
+      "label": "Questions",
+      "placeLike.label": "What is this place like?",
+      "vulnerable.label": "Who is vulnerable nearby?",
+      "reassures.label": "What single thing reassures you that this place is safe?",
+      "notIdeal.label": "Why isn’t this place ideal?"
     },
     "gearBenefit": {
-      "label": "The Gear Benefit",
-      "heavyWeapons.label": "Heavy weapons (with the heavy tag)",
-      "autoWeapons.label": "Auto weapons (with the auto tag but not the heavy tag)",
-      "techExplosives.label": "Technical Equipment & Explosives (with the tech or explode tag)"
+      "label": "Which single Gear Benefit does the Safe House offer?",
+      "heavyWeapons.label": "Heavy weapons",
+      "autoWeapons.label": "Automatic weapons",
+      "techExplosives.label": "Tech & Explosives"
     }
   },
   "ATDC.settings": {
@@ -621,5 +404,8 @@
         "fae.label": "The Fae Conspiracy"
       }
     }
+  },
+  "ATDC.heatPanel": {
+    "title": "HEAT"
   }
 }
