--- a/lang/en.json
+++ b/lang/en.json
@@ -407,5 +407,10 @@
   },
   "ATDC.heatPanel": {
     "title": "HEAT"
+  },
+  "ATDC.dialog": {
+    "action": {
+      "risk.label": "Risk Die:"
+    }
   }
 }
